--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
       <div class="container">
-        <a class="navbar-brand text-white" href="#"> <img src="assets/img/viajes.svg" alt=""> Viajes Chile</a>
+        <a class="navbar-brand text-white" href="#" data-toggle="tooltip" title="Holi!"> <img src="assets/img/viajes.svg" alt=""> Viajes Chile</a>
         <button
           class="navbar-toggler"
           type="button"
