--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Fernanda Bastías Cristi">
+    <meta name="author" content="Carolina Valdebenito">
     <link rel="shortcut icon" type="image.png" href="favicon.png"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
@@ -170,7 +170,7 @@
     <div class="container">
     <div class="row">
       <article class="col-xs-12 col-md-12 col-lg-6 col-xl-6">
-        <h3>VIAJES CHILE</h3>
+        <h3 data-toggle="tooltip" title="Holi!">VIAJES CHILE</h3>
       </article>
       <article class="col-xs-12 col-md-12 col-lg-6 col-xl-6 py-1 justify-content-center">
         <div class="justify-content-center row">
